--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="f1eb1c6371fb378ab6537fe7f65ac42a3b3cfa5b" />
     </application>
 
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
